--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "ms-vscode.cpptools",
         "xaver.clang-format",
-        "mine.cpplint"
+        "mine.cpplint",
+        "cschlosser.doxdocgen"
     ],
 }
