--- a/project1/.vscode/settings.json
+++ b/project1/.vscode/settings.json
@@ -10,7 +10,8 @@
         "limits.h": "c",
         "strings.h": "c",
         "termios.h": "c",
-        "features.h": "c"
+        "features.h": "c",
+        "frame.h": "c"
     },
     "cpplint.filters": [
         "-whitespace",
