Change data structure

--- a/project1/.vscode/settings.json
+++ b/project1/.vscode/settings.json
@@ -12,7 +12,9 @@
         "termios.h": "c",
         "features.h": "c",
         "frame.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "fstream": "c",
+        "sstream": "c"
     },
     "cpplint.filters": [
         "-whitespace",
