App send and wip in receiver

--- a/project1/.vscode/settings.json
+++ b/project1/.vscode/settings.json
@@ -14,7 +14,12 @@
         "frame.h": "c",
         "stdbool.h": "c",
         "fstream": "c",
-        "sstream": "c"
+        "sstream": "c",
+        "array": "c",
+        "hash_map": "c",
+        "string_view": "c",
+        "initializer_list": "c",
+        "utility": "c"
     },
     "cpplint.filters": [
         "-whitespace",
