--- a/project1/Makefile
+++ b/project1/Makefile
@@ -9,8 +9,13 @@ OBJECTS := $(SOURCES:%.c=%.o)
 
 .PHONY: clean
 
+all: application
+
 application: $(OBJECTS)
 	$(CC) $(CFLAGS) -o $(PROG_NAME) $(OBJECTS)
+
+virtual:
+	sudo socat -d  -d  PTY,link=/dev/ttyS10,mode=777   PTY,link=/dev/ttyS11,mode=777
 
 clean:
 	rm -f $(PROG_NAME) $(OBJECTS)
