Fix memory bug; log induced errors; cleanup control packet

--- a/project1/.vscode/settings.json
+++ b/project1/.vscode/settings.json
@@ -37,7 +37,8 @@
         "-build/include_subdir",
         "-build/header_guard",
         "-readability/casting",
-        "-runtime/int"
+        "-runtime/int",
+        "-runtime/threadsafe_fn"
     ],
     "cpplint.languages": [
         "c"
